# bevy_workshop

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  docker.yml
assets/: flag_shader.wgsl  level.bw
bevy-workshop/: book.toml
bevy-workshop/src/: SUMMARY.md  actions.md  basics.md  camera.md  enemies.md  intro.md  level.md  next_bevy.md  next_game.md  platforms.md  setup.md  sound.md  target.md  terms.md  visuals.md  welcome.md
bevy-workshop/src/actions/: adding.md  exercises.md  index.md  progress.md  winning.md
bevy-workshop/src/basics/: assets.md  controls.md  display.md  exercises1.md  exercises2.md  index.md  next.md  physics.md  progress.md
bevy-workshop/src/intro/: application.md  index.md  next.md  plugins.md  progress.md  states.md  systems.md  updating.md
bevy-workshop/src/level/: display.md  exercises.md  index.md  loading.md  progress.md
bevy-workshop/src/sound/: exercises.md  index.md  jumping.md  progress.md
bevy-workshop/src/terms/: bevy.md  ecs.md  index.md
bevy-workshop/src/visuals/: exercises.md  flag.md  index.md  progress.md
bevy-workshop/theme/: header.hbs
src/: level_loader.rs  main.rs  menu.rs  splash.rs
src/game/: audio.rs  flag.rs  mod.rs  player.rs
wasm/: index.html
