[package]
name = "bevy_workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"

[dependencies.bevy]
version = "0.15.0-rc.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "wav",
    "png",
    "webgl2",
    "x11",
]

[features]
debug = ["bevy/bevy_gizmos"]

[profile.dev.package."*"]
debug-assertions = false
debug = false
# opt-level = 3
